--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
